# iris

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/iris/: __init__.py  cache.py  config.py  extractor.py  fetcher.py  healthcheck.py  logging.py  main.py  pdf_extractor.py  rate_limiter.py  robots_handler.py  schemas.py  wait_strategy.py
src/iris/routes/: __init__.py  fetch.py  health.py
src/iris/sentinel_sdk/: __init__.py  client.py  exceptions.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_content_type.py  test_e2e_iris.py  test_error_classification.py  test_extractor.py  test_fetcher.py  test_logging.py  test_pdf_extractor.py  test_rate_limiter.py  test_retry.py  test_robots_handler.py  test_routes.py  test_structured_data.py  test_wait_strategy.py
